Update Introduction notebook with paper DOI

--- a/talks/Friday/PULPO - optimization and brightway/01_introduction_to_PULPO.ipynb
+++ b/talks/Friday/PULPO - optimization and brightway/01_introduction_to_PULPO.ipynb
@@ -155,7 +155,7 @@
     "\n",
     "The $\\textcolor{darkorange}{\\text{orange}}$ equation represents the classic material balance, but the underlying $A$ matrix must be rectangular, rather than square, leading to degrees of freedom in the optimization problem. The $\\textcolor{dodgerblue}{\\text{blue}}$ equation corresponds to the impact calculation via the characterization factor matrix $Q$ and the biosphere matrix $B$.\n",
     "\n",
-    "The remainder of the elements in the problem formulation relate to constraints. For more details on the nomenclature, check the Supplementary Information of the <mark style=\"background: #FF5582A6;\">([Paper - TBD!!!](XXX))</mark>.\n",
+    "The remainder of the elements in the problem formulation relate to constraints. For more details on the nomenclature, check the Supplementary Information of the [Paper](https://doi.org/10.1111/jiec.13561).\n",
     "_____\n"
    ]
   },
@@ -168,7 +168,7 @@
     "\n",
     "The current form of square technosphere matrices is a consequence of the search for a unique solution to the inventory problem. See [Heijungs and Suh (2002)](https://link.springer.com/book/10.1007/978-94-015-9900-9) for an excellent overview of the computational structure of LCA, also commenting upon the topic of optimization (*Linear Programming*).\n",
     "\n",
-    "In this reference, the use of optimization to deal with multi-functional units that lead to rectangular matrices and non-unique solutions has been highlighted. The previous approach builds upon this idea, by constructing rectangular technology choice matrices in a <span style=\"color: dodgerblue; font-weight: bold;\">bottom-up</span> fashion. The matrix is concatenated from various inventories, specifying identical products from distinct processes in the same row. See the [example data](data/rice_husk_example_TCM_data.xlsx) for the rice husk example from the following notebook. Compiling all of this data by hand in a spreadsheet ensures that the practitioner takes concious decisions about which data to include, but can be a limiting factor when moving to much more complex problems, as illustrated in the CCU case study in the <mark style=\"background: #FF5582A6;\">([Paper - TBD!!!](XXX))</mark>.\n",
+    "In this reference, the use of optimization to deal with multi-functional units that lead to rectangular matrices and non-unique solutions has been highlighted. The previous approach builds upon this idea, by constructing rectangular technology choice matrices in a <span style=\"color: dodgerblue; font-weight: bold;\">bottom-up</span> fashion. The matrix is concatenated from various inventories, specifying identical products from distinct processes in the same row. See the [example data](data/rice_husk_example_TCM_data.xlsx) for the rice husk example from the following notebook. Compiling all of this data by hand in a spreadsheet ensures that the practitioner takes concious decisions about which data to include, but can be a limiting factor when moving to much more complex problems, as illustrated in the CCU case study in the [Paper](https://doi.org/10.1111/jiec.13561).\n",
     "\n",
     "With PULPO we are proposing a <span style=\"color: orange; font-weight: bold;\">top-down</span> approach, capitalizing on the already existing information in commercial and user LCIs. Departing from the square matrix, rows of identical products are summed up, leading to a technology (*or regional*) choice for the supply of this product in all other processes that utilize this product.\n",
     "\n",
@@ -231,13 +231,6 @@
     "    - **[converter](https://github.com/flechtenberg/pulpo/blob/master/pulpo/utils/converter.py)**: Processes raw LCI data and user inputs, converting them into the required format for the optimization problem.\n",
     "    - **[optimizer](https://github.com/flechtenberg/pulpo/blob/master/pulpo/utils/optimizer.py)**: Formulates and solves the optimization problem using **Pyomo**.\n",
     "    - **[saver](https://github.com/flechtenberg/pulpo/blob/master/pulpo/utils/saver.py)**: Provides functions to save results to `.xlsx` files or display them in the console using `pandas`.\n",
-    "  \n",
-    "\n",
-    "<div style=\"border: 2px solid #00BFFF; padding: 15px; border-radius: 5px; background-color: #E0FFFF; color: black;\">\n",
-    "  <h3 style=\"margin-top: 0;\">Seeking Collaboration 🛠️💻</h3>\n",
-    "  <p>We are looking for contributors to help with structuring, testing, and implementing best practices for package management in PULPO. If you have experience in these areas and are interested in contributing, your expertise would be greatly appreciated!</p>\n",
-    "  <p>Obviously, helping hands in the implementation of new features, bug fixes, or other updates and extensions are also more than welcome.</p>\n",
-    "</div>\n",
     "\n",
     "\n",
     "The following parts of this workshop deal with various hands-on example case studies. Apart from these, there are various showcase notebooks in the [GitHub](https://github.com/flechtenberg/pulpo) repository:\n",
