--- a/talks/Wednesday/io_bonsai_importer/io_bonsai_import.ipynb
+++ b/talks/Wednesday/io_bonsai_importer/io_bonsai_import.ipynb
@@ -1108,9 +1108,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python [conda env:io-bonsai]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-io-bonsai-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1122,9 +1122,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
