Update .png to .PNG to ensure correct rendering

--- a/talks/Friday/PULPO - optimization and brightway/X2_PULPO_exercise.ipynb
+++ b/talks/Friday/PULPO - optimization and brightway/X2_PULPO_exercise.ipynb
@@ -32,11 +32,11 @@
     "\n",
     "The whole system can be explored in [activity-browser](https://github.com/LCA-ActivityBrowser/activity-browser):\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"figures/generic_database.png\" alt=\"System Boundaries of Rice Superstructure (Dark Theme)\" width=\"550\">\n",
+    "    <img src=\"figures/generic_database.PNG\" alt=\"System Boundaries of Rice Superstructure (Dark Theme)\" width=\"550\">\n",
     "</div>\n",
     "And the impact categories:\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"figures/generic_impact_categories.png\" alt=\"System Boundaries of Rice Superstructure (Dark Theme)\" width=\"300\">\n",
+    "    <img src=\"figures/generic_impact_categories.PNG\" alt=\"System Boundaries of Rice Superstructure (Dark Theme)\" width=\"300\">\n",
     "</div>\n",
     "\n",
     "### 🚀 Your Challenge:\n",
