--- a/talks/Friday/PULPO - optimization and brightway/02_rice_example_resolution.ipynb
+++ b/talks/Friday/PULPO - optimization and brightway/02_rice_example_resolution.ipynb
@@ -193,11 +193,11 @@
     "_____\n",
     "The whole system can be explored in [activity-browser](https://github.com/LCA-ActivityBrowser/activity-browser):\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"figures/rice_husk_database.png\" alt=\"System Boundaries of Rice Superstructure (Dark Theme)\" width=\"600\">\n",
+    "    <img src=\"figures/rice_husk_database.PNG\" alt=\"System Boundaries of Rice Superstructure (Dark Theme)\" width=\"600\">\n",
     "</div>\n",
     "And the impact categories:\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"figures/rice_impact_categories.png\" alt=\"System Boundaries of Rice Superstructure (Dark Theme)\" width=\"300\">\n",
+    "    <img src=\"figures/rice_impact_categories.PNG\" alt=\"System Boundaries of Rice Superstructure (Dark Theme)\" width=\"300\">\n",
     "</div>"
    ]
   },
@@ -1291,7 +1291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
