Update pmc algorithm - ecoinvent.ipynb

--- a/talks/Wednesday/estimating material composition of consumer goods/pmc algorithm - ecoinvent.ipynb
+++ b/talks/Wednesday/estimating material composition of consumer goods/pmc algorithm - ecoinvent.ipynb
@@ -26,35 +26,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Concepts to understand\n",
+    "# Concepts to understand\n",
+    "\n",
     "**Material flows hierarchy defined in the paper:**\n",
+    "\n",
     "MF - material footprint; \n",
     "MC - material composition; \n",
     "NIMF - non-incorporated material footprint.\n",
-    "![MF vs MC](/visuals/mf-and-mc.jpg)\n",
+    "![MF vs MC](visuals/mf-and-mc.jpg)\n",
     "\n",
     "---\n",
     "\n",
     "**Consider a simplified example of a supply chain of laptop manufacturing:**\n",
-    "![Supply chain](/visuals/supply-chain.jpg)\n",
+    "![Supply chain](visuals/supply-chain.jpg)\n",
     "\n",
     "---\n",
     "\n",
     "**To estimate the material composition, we want to sum up only the copper amount that actually ends up in the laptop and filter out the rest of the inputs:**\n",
-    "![Filtering](/visuals/filtering.jpg)\n",
+    "![Filtering](visuals/filtering.jpg)\n",
     "\n",
     "---\n",
     "\n",
     "**The following major steps are part of our approach:**\n",
-    "![Steps](/visuals/steps.jpg)\n"
+    "![Steps](visuals/steps.jpg)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Imports\n",
-    "We start with importing all the nesseccary libraries:"
+    "# Imports\n",
+    "\n",
+    "We start with importing all the necessary libraries:"
    ]
   },
   {
@@ -63,32 +66,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from brightway2 import *\n",
     "from functools import cmp_to_key\n",
-    "import brightway2 as bw\n",
     "import json\n",
     "import csv\n",
     "import sys\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "# Don't do this\n",
+    "from brightway2 import *\n",
+    "import brightway2 as bw\n",
+    "\n",
+    "# Do this\n",
+    "import bw2io as bi\n",
+    "import bw2data as bd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Constants\n",
+    "# Constants\n",
+    "\n",
     "Then, we define constant parameters used in the script:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_NAME = 'default' #name of your Brightway project\n",
+    "PROJECT_NAME = 'material-composition' #name of your Brightway project\n",
     "DB_NAME = 'ecoinvent-3.10-cutoff' #name of your LCI database in your Brightway project \n",
-    "BIO_DB_NAME = 'biosphere3' #name of your bioflows database in your Brightway project \n",
+    "BIO_DB_NAME = 'ecoinvent-3.10-biosphere' #name of your bioflows database in your Brightway project \n",
     "product = 'computer production, laptop' #the product that we want to explore for its materil content; the name should come from the LCI database you will use\n",
     "prod_wght = 3.15 #kg per product ideally specified in your LCI database (comes from Ecoinvent 3.6 in our case)\n",
     "METHOD_KEY = ('ReCiPe 2016 v1.03, endpoint (H)', 'natural resources', 'material resources: metals/minerals') #selected method from the list of impact methods; in practice arbitrary as it does not impact the resulting inventory/supply vectors but is needed to run the lca.lci() command\n",
@@ -106,7 +116,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Project and databases set up\n",
+    "# Project and databases set up\n",
+    "\n",
     "It is assumed that you already have Brightway project, ecoinvent and biosphere databases.\n",
     "If not, it is easy to set them up and download them using Activity Browser.\n",
     "You can also use `bw2setup()` to do that in Brightway. \n",
@@ -116,10 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "if PROJECT_NAME not in bd.projects:\n",
+    "    bi.restore_project_directory(\n",
+    "        \"/srv/data/ecoinvent-3.10-cutoff-bw2.tar.gz\", \n",
+    "        project_name=PROJECT_NAME\n",
+    "    )\n",
     "projects.set_current(PROJECT_NAME)\n",
     "db  = bw.Database(DB_NAME)\n",
     "bio = bw.Database(BIO_DB_NAME)"
@@ -133,10 +149,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "script_dir = os.path.dirname(os.path.abspath(sys.argv[0]))\n",
     "os.chdir(script_dir)"
@@ -155,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +420,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assigning material incorporation parameters to all exchanges in the ecoinvent-3.10-cutoff database: 40%\r"
+     ]
+    }
+   ],
    "source": [
     "db_inc_filter(db, avoid_activities) "
    ]
@@ -416,7 +438,7 @@
    "metadata": {},
    "source": [
     "This step could also be done manually in Activity Browser, if the corresponding additional column woudl be added:\n",
-    "![AB](/visuals/ab-incorporation.png)"
+    "![AB](visuals/ab-incorporation.png)"
    ]
   },
   {
@@ -431,17 +453,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "act = activity_by_name(product, db)\n",
     "lca = LCA_create(act, FU)\n",
@@ -458,39 +472,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      ">>> BEFORE filtering:\n",
-      "\n",
-      "■ Material footprint, MF (based on inventory vector) in 1 'computer production, laptop' (unit, GLO, None):\n",
-      "Tantalum: 0.00019 kg OR 0.00604 %\n",
-      "Aluminium: 0.48225 kg OR 15.30958 %\n",
-      "Copper: 0.36106 kg OR 11.46236 %\n",
-      "\n",
-      "\n",
-      "■ Material footprint, MF (based on supply array):\n",
-      "Copper : 0.31864 kg OR 10.11559 %\n",
-      "Aluminium : 0.62168 kg OR 19.73588 %\n",
-      "> Metals total : 0.94032 kg OR 29.85146 %\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\n>>> BEFORE filtering:\\n\")  \n",
     "\n",
@@ -575,15 +559,22 @@
    "metadata": {},
    "source": [
     "In the result, we are able to accuratelly estimate the material composition of products:\n",
-    "![Results](/visuals/results.jpg)"
+    "![Results](visuals/results.jpg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ab",
+   "display_name": "Python [conda env:levon]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-levon-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -595,9 +586,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
