Update Brightway what to expect.ipynb

--- a/talks/Wednesday/Brightway what to expect/Brightway what to expect.ipynb
+++ b/talks/Wednesday/Brightway what to expect/Brightway what to expect.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "## Activity Browser compatible with 2.5 by end of 2024\n",
     "\n",
-    "(Attempt at demo)\n",
+    "Demonstration\n",
+    "\n",
+    "Available on [Anaconda](https://anaconda.org/cmutel/activity-browser-dev25) - be sure to also install [pypardiso](https://anaconda.org/conda-forge/pypardiso) or [scikit-umfpack](https://anaconda.org/conda-forge/scikit-umfpack).\n",
     "\n",
     "## Improvements to graph visualization and calculation speed\n",
     "\n",
@@ -39,6 +41,14 @@
     "* Flexibility in labels (see [configuration](https://github.com/brightway-lca/brightway2-data/blob/main/bw2data/configuration.py))\n",
     "* See [stretch goal](https://github.com/brightway-lca/brightway2-data/issues/181)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cb052c9-63a5-400b-9890-cb0fbf849eca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
