add link to timex documentation

--- a/talks/Thursday/bw_timex: Combining dynamic and prospective for time-explicit LCA/1_getting_started.ipynb
+++ b/talks/Thursday/bw_timex: Combining dynamic and prospective for time-explicit LCA/1_getting_started.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Getting Started with `bw_timex`\n",
     "\n",
+    "> [👉 Documentation](https://docs.brightway.dev/projects/bw-timex/en/latest/)\n",
+    "\n",
     "Here's a rundown of the steps involved in a `TimexLCA`:\n",
     "\n",
     "<div style=\"display: flex; justify-content: center; background-color: white; padding: 10px; width: 45%; margin: auto;\">\n",
