--- a/talks/Thursday/bw_timex: Combining dynamic and prospective for time-explicit LCA/further_examples/example_electric_vehicle_standalone.ipynb
+++ b/talks/Thursday/bw_timex: Combining dynamic and prospective for time-explicit LCA/further_examples/example_electric_vehicle_standalone.ipynb
@@ -2345,9 +2345,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "medusa",
+   "display_name": "Python [conda env:bwtimex]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bwtimex-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2359,9 +2359,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
