--- a/talks/Thursday/bw_timex: Combining dynamic and prospective for time-explicit LCA/further_examples/example_simple_dynamic_characterization.ipynb
+++ b/talks/Thursday/bw_timex: Combining dynamic and prospective for time-explicit LCA/further_examples/example_simple_dynamic_characterization.ipynb
@@ -1307,9 +1307,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:bwtimex]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bwtimex-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1321,7 +1321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
