--- a/talks/Thursday/ecoinvent_XXX talk/ecoinvent_interface.ipynb
+++ b/talks/Thursday/ecoinvent_XXX talk/ecoinvent_interface.ipynb
@@ -1069,9 +1069,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:dlt]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dlt-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1083,7 +1083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
