Make timex svgs light mode compatible

--- a/talks/Thursday/bw_timex: Combining dynamic and prospective for time-explicit LCA/1_getting_started.ipynb
+++ b/talks/Thursday/bw_timex: Combining dynamic and prospective for time-explicit LCA/1_getting_started.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Here's a rundown of the steps involved in a `TimexLCA`:\n",
     "\n",
-    "<img src=\"img/method.svg\" style=\"width: 60%;\">"
+    "<img src=\"img/method.svg\" style=\"background: white; width: 60%;\">"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "source": [
     "Let's walk through steps 1-4 considering a very simple dummy system:\n",
     "\n",
-    "![example static system model](img/example_static_system_model.svg)"
+    "<img src=\"img/example_static_system_model.svg\" style=\"background: white\">"
    ]
   },
   {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
    "source": [
     "Making up some temporal information:\n",
     "\n",
-    "![example temporalized system model](img/example_temporalized_system_model.svg)"
+    "<img src=\"img/example_temporalized_system_model.svg\" style=\"background: white\">"
    ]
   },
   {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
