--- a/talks/Thursday/randonneur/Randonneur and randonneur_data.ipynb
+++ b/talks/Thursday/randonneur/Randonneur and randonneur_data.ipynb
@@ -730,9 +730,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:dlt]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dlt-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -744,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
