Update Multifunctional library for Brightway.ipynb

--- a/talks/Thursday/multifunctional/Multifunctional library for Brightway.ipynb
+++ b/talks/Thursday/multifunctional/Multifunctional library for Brightway.ipynb
@@ -12,25 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "39b4c3f9-7837-4d24-a592-3e1b253b7866",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cmutel/Code/Brightway/brightway2-calc/bw2calc/__init__.py:45: UserWarning: \n",
-      "It seems like you have an ARM architecture, but haven't installed scikit-umfpack:\n",
-      "\n",
-      "    https://pypi.org/project/scikit-umfpack/\n",
-      "\n",
-      "Installing it could give you much faster calculations.\n",
-      "\n",
-      "  warnings.warn(UMFPACK_WARNING)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import multifunctional as mf\n",
     "import bw2data as bd\n",
@@ -40,29 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7a09e1f0-c936-4d0a-a7ca-54d7b73cf2f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Restoring project backup archive - this could take a few minutes...\n",
-      "Restored project: multifunctional demo\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'multifunctional demo'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bi.remote.install_project(\n",
     "    'ecoinvent-3.10-biosphere', \n",
@@ -73,38 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f1098c41-1c02-4003-94e5-0f7614f808a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Applying automatic update: 4.0 database search directories\n",
-      "Reindexing database ecoinvent-3.10-biosphere\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bd.projects.set_current(\"multifunctional demo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "456e466f-8170-456d-843e-1768ecef0b6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cmutel/Code/Brightway/brightway2-data/bw2data/utils.py:377: UserWarning: Given search criteria very broad; try to specify at least a database\n",
-      "  warnings.warn(\"Given search criteria very broad; try to specify at least a database\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "co2 = bd.get_node(\n",
     "    name='Carbon dioxide, fossil',\n",
@@ -114,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6548534b-a091-4481-ae27-5672e1b3a8cb",
    "metadata": {},
    "outputs": [],
@@ -125,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "45590748-356e-4705-837b-eb9e2aa72230",
    "metadata": {},
    "outputs": [],
@@ -178,61 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c15701a4-04f2-4e76-bc4b-4216aa47ef87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████| 3/3 [00:00<00:00, 5067.62it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vacuuming database \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mf_db.write(mf_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "db2aa9b7-7e18-4979-8e3a-0a7ce5db5800",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'woof' (kg, None, None) 4364\n",
-      "Multifunctional: 'process - 1' (None, somewhere, None) 4365\n",
-      "\t Exchange: 4 kg 'meow' (kg, None, None) to Multifunctional: 'process - 1' (None, somewhere, None)>\n",
-      "\t Exchange: 6 kg 'woof' (kg, None, None) to Multifunctional: 'process - 1' (None, somewhere, None)>\n",
-      "\t Exchange: 100 kilogram 'Carbon dioxide, fossil' (kilogram, None, ('air', 'non-urban air or from high stacks')) to Multifunctional: 'process - 1' (None, somewhere, None)>\n",
-      "'meow' (kg, None, None) 4363\n",
-      "Read-only allocated process: 'process - 1' (kg, somewhere, None) 4366\n",
-      "\t Exchange: 4 kg 'meow' (kg, None, None) to Read-only allocated process: 'process - 1' (kg, somewhere, None)>\n",
-      "\t Exchange: 28.000000000000004 kilogram 'Carbon dioxide, fossil' (kilogram, None, ('air', 'non-urban air or from high stacks')) to Read-only allocated process: 'process - 1' (kg, somewhere, None)>\n",
-      "Read-only allocated process: 'process - 1' (kg, somewhere, None) 4367\n",
-      "\t Exchange: 6 kg 'woof' (kg, None, None) to Read-only allocated process: 'process - 1' (kg, somewhere, None)>\n",
-      "\t Exchange: 72.0 kilogram 'Carbon dioxide, fossil' (kilogram, None, ('air', 'non-urban air or from high stacks')) to Read-only allocated process: 'process - 1' (kg, somewhere, None)>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for node in mf_db:\n",
     "    print(node, node.id)\n",
@@ -242,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4381474d-5a4c-4fc6-bb7b-7c3848f17554",
    "metadata": {},
    "outputs": [],
@@ -256,21 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cc437dc5-60d8-4f6f-8440-ccdc71958841",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21.987000000000002"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lca = bc.LCA({bd.get_node(name=\"meow\"): 3.141}, IPCC)\n",
     "lca.lci()\n",
@@ -280,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "21c1b412-6d24-43a6-be6e-180196b7803a",
    "metadata": {},
    "outputs": [],
@@ -291,21 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b5ce0dbf-2b42-4fef-b970-07d786e550a9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "39.2625"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lca = bc.LCA({bd.get_node(name=\"meow\"): 3.141}, IPCC)\n",
     "lca.lci()\n",
@@ -325,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "8ee82953-9105-4390-bfd8-e9c942f34f23",
    "metadata": {},
    "outputs": [],
@@ -335,32 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ed9f5473-c5b5-4368-8fc5-2209deb62a0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████| 3/3 [00:00<00:00, 16299.11it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vacuuming database \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "happy = {\n",
     "    (\"emojis FTW\", \"😼\"): {\n",
@@ -420,57 +283,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "18de74f8-debe-4e79-86b3-5f494f8dc34e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('price',\n",
-       "  <MessageType.ALL_VALID: 'All properties found and have correct type'>),\n",
-       " ('😊', <MessageType.MISSING_PROPERTY: 'Missing property'>),\n",
-       " ('mass',\n",
-       "  <MessageType.ALL_VALID: 'All properties found and have correct type'>)]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mf.list_available_properties(\"emojis FTW\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "92c19c7f-1e8c-4a64-bdca-fd008cec88af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████| 3/3 [00:00<00:00, 17747.41it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vacuuming database \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "happy_dog = {\n",
     "    (\"emojis FTW\", \"😼\"): {\n",
@@ -523,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ebf9481c-49bf-4f31-a233-4796d6f2e2b1",
    "metadata": {},
    "outputs": [],
@@ -534,21 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "1e86839a-b89e-4455-b470-bb1a208bcff6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.0396103701591493"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lca = bc.LCA({bd.get_node(name=\"meow\"): 3.141}, IPCC)\n",
     "lca.lci()\n",
@@ -566,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "aad22d54-40c9-4989-83e6-1d465dd6ce98",
    "metadata": {},
    "outputs": [],
@@ -589,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "3f0222cb-f663-4262-b4a0-b302492d6322",
    "metadata": {},
    "outputs": [],
@@ -600,42 +415,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "89026a27-cdd3-4bd7-a879-3e600fa111b4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22.903124500751495"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lca = bc.LCA({bd.get_node(name=\"meow\"): 3.141}, IPCC)\n",
     "lca.lci()\n",
     "lca.lcia()\n",
     "lca.score"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6e94b68-8f22-4aef-bdfd-f216459ebc6a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:dlt]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dlt-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -647,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
