--- a/talks/Friday/PULPO - optimization and brightway/02_rice_example_resolution.ipynb
+++ b/talks/Friday/PULPO - optimization and brightway/02_rice_example_resolution.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<div style=\"border: 2px solid #FFA500; padding: 10px; border-radius: 5px; background-color: #FFFACD; color: black; text-align: center;\">\n",
-    "  <h1 style=\"margin: 0;\">Rice Husk Example 🌾</h1>\n",
+    "  <h1 style=\"margin: 0;\">Rice/Husk Example 🌾</h1>\n",
     "</div>"
    ]
   },
@@ -85,7 +85,7 @@
    "metadata": {},
    "source": [
     "##### **<u>Technosphere Matrix A</u>**\n",
-    "In the Technosphere, new choices are added in a **bottom-up** fashion, extending the square matrix:\n",
+    "This is the technosphere:\n",
     "\n",
     "\n",
     "$$\n",
@@ -123,7 +123,7 @@
    "metadata": {},
    "source": [
     "##### <u>Biosphere Matrix B</u>\n",
-    "In the Biosphere, the corresponding elementary flows need to be added:"
+    "This is the biosphere:"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "id": "e9cb19cf-06e4-4453-af0d-84d3320bd749",
    "metadata": {},
    "source": [
-    "The final row for $\\textcolor{FireBrick}{\\text{economic flows}}$ is derived from the factor requirements matrix and the factor price vector from the original example. Only the cost for natural gas has been lowered slightly (16 --> 13), to enforce the economic competitiveness of the NG boiler. Although integrating economic flows into the biosphere matrix is unconventional, this approach will later be useful for demonstrating a multi-objective trade-off assessment, without the need to introduce additional elements to account for economic impacts."
+    "The final row for $\\textcolor{FireBrick}{\\text{economic flows}}$ is derived from the factor requirements matrix and the factor price vector from the original example. Only the cost for natural gas has been lowered slightly (16 --> 13), to enforce the economic competitiveness of the natural gas (NG) boiler. Although integrating economic flows into the biosphere matrix is unconventional, this approach will later be useful for demonstrating a multi-objective trade-off assessment, without the need to introduce additional elements to account for economic impacts."
    ]
   },
   {
