Final Update to Talk Material

--- a/talks/Friday/PULPO - optimization and brightway/02_rice_example_resolution.ipynb
+++ b/talks/Friday/PULPO - optimization and brightway/02_rice_example_resolution.ipynb
@@ -261,6 +261,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb114bcc-ceeb-4ddb-afa3-e2cec148fd5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pulpo.install_rice_husk_db()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "12c6fe9d69080daa",
    "metadata": {
     "ExecuteTime": {
@@ -270,7 +280,6 @@
    },
    "outputs": [],
    "source": [
-    "pulpo.install_rice_husk_db()\n",
     "project = \"rice_husk_example\" \n",
     "database = \"rice_husk_example_db\"\n",
     "method = \"('my project', 'climate change')\""
@@ -1082,7 +1091,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epsilon_list = np.linspace(lower_impact, upper_impact, num=5)"
+    "epsilon_list = np.linspace(lower_impact, upper_impact, num=16)"
    ]
   },
   {
@@ -1291,7 +1300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
